Update Transaction  stock
