# docs/swagger.yaml
@@ -4016,9 +4016,13 @@ paths:
   /master/materials:
     get:
       parameters:
-      - description: search keyword
+      - description: search keyword (mat_name/mat_code)
         in: query
         name: q
+        type: string
+      - description: search keyword across mat_code, mat_name_th, spec_description
+        in: query
+        name: search
         type: string
       - description: group_code filter
         in: query
